--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
 //fonts//
-$main-font: ;
+$main-font: 'Mulish', sans-serif;
 
 //font sizes//
 $s-x-small: 16px;
@@ -19,5 +19,3 @@ $divider-color: #d8d8d8;
 $divider-stroke-color: #979797;
 $accent-color: #4a4ff2;
 $white-color: #fff;
-
-
