header footer styling done

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -19,3 +19,6 @@ $divider-color: #d8d8d8;
 $divider-stroke-color: #979797;
 $accent-color: #4a4ff2;
 $white-color: #fff;
+
+//margins//
+$side-site-margin: 0 10vw;
