--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,1 +1,23 @@
 @use 'variables';
+
+@import 'header-and-footer';
+
+//base//
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: variables.$main-font;
+}
+a, button, input, textarea, select {
+    all: unset;
+}
+ul, li {
+    list-style-type: none;
+}
+body {
+    overflow-x: hidden;  //hide width scroll
+    background-color: variables.$white-color;
+}
+
+
