--- a/styles/_header-and-footer.scss
+++ b/styles/_header-and-footer.scss
@@ -34,6 +34,7 @@
     margin: variables.$side-site-margin;
     &__nav {
         width: 100%;
+        max-width: 1600px;
         display: flex;
         justify-content: space-between;
         padding: 5vw 0;
@@ -47,9 +48,10 @@
 .footer {
     margin: variables.$side-site-margin;
     &__menu {
+        width: 100%;
+        max-width: 1600px;
         display: flex;
         justify-content: space-between;
-        width: 100%;
     }
     &__content {
         display: flex;
