--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,6 +2,12 @@
 
 @import 'header-and-footer';
 
+%divider {
+    width: 100%;
+    height: 2px;
+    background-color: variables.$divider-color;
+}
+
 //base//
 *{
     box-sizing: border-box;
@@ -20,4 +26,55 @@ body {
     background-color: variables.$white-color;
 }
 
+.main {
+    margin: variables.$side-site-margin;
+    //ABOUT// 
+    .about {
+        width: 100%;
+        max-width: 1600px;
+        display: flex;
+        justify-content: space-between;
+        padding: 3vw 0 11vw 0;
+        &__left {
+            display: flex;
+            flex-direction: column;
+            gap: 4vw;
+            &__text {
+                font-size: variables.$s-regular;
+                font-weight: variables.$w-bold;
+                color: variables.$accent-color;
+                letter-spacing: -0.423077px;
+                line-height: 28px;
+            }
+            &__title {
+                margin: 0;
+                font-size: variables.$s-large;
+                font-weight: variables.$w-bold;
+                color: variables.$text-color;
+                line-height: 60px;
+                span {
+                    color: variables.$accent-color;
+                }
+            }
+        }
+        &__right {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            &__line {
+                @extend %divider;
+                width: 2.5vw;
+                margin-bottom: 0.7vw;
+            }
+            &__text {
+                font-size: variables.$s-small;
+                font-weight: variables.$w-normal;
+                color: variables.$text-color;
+                font-style: italic;
+                opacity: 0.6;
+            }
+        }
+    }
 
+    //GALLERY// 
+}
