--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,7 +55,7 @@
   color: #000;
   font-size: 18px;
 }
-.main .about__right__line {
+.main .awards__content__line, .main .about__right__line {
   width: 100%;
   height: 2px;
   background-color: #d8d8d8;
@@ -196,4 +196,113 @@ body {
 .main .gallery .grid__container .twelfth {
   grid-row: 27/33;
   grid-column: 3/4;
+}
+.main .awards {
+  width: 100%;
+  max-width: 1600px;
+  margin-top: 8vw;
+  display: flex;
+  flex-direction: column;
+  gap: 8vw;
+}
+.main .awards__introduction {
+  display: flex;
+  justify-content: space-between;
+}
+.main .awards__introduction__title {
+  font-size: 28px;
+  font-weight: 700;
+  color: #111111;
+  line-height: 38px;
+}
+.main .awards__introduction__lists {
+  display: flex;
+  gap: 2vw;
+}
+.main .awards__introduction__lists__left, .main .awards__introduction__lists__right {
+  width: 11.5vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1vw;
+}
+.main .awards__introduction__lists__text {
+  font-size: 18px;
+  font-weight: 400;
+  color: #111111;
+  line-height: 23px;
+  opacity: 0.6;
+}
+.main .awards__introduction__lists__text:hover {
+  opacity: 1;
+  color: #4a4ff2;
+  text-decoration: underline;
+}
+.main .awards__content {
+  display: flex;
+  flex-direction: column;
+  gap: 4vw;
+}
+.main .awards__content__title {
+  font-size: 22px;
+  font-weight: 700;
+  color: #111111;
+  line-height: 28px;
+}
+.main .awards__content__subtitle {
+  font-size: 18px;
+  font-weight: 700;
+  color: #111111;
+  line-height: 23px;
+}
+.main .awards__content__text {
+  font-size: 16px;
+  font-weight: 400;
+  color: #111111;
+  line-height: 20px;
+}
+.main .awards__content__text span {
+  display: block;
+  opacity: 0.6;
+  line-height: 26px;
+  margin-top: 1vw;
+}
+.main .awards__content__year {
+  font-size: 16px;
+  font-weight: 400;
+  color: #111111;
+  line-height: 20px;
+  text-align: right;
+}
+.main .awards__content__grid {
+  display: grid;
+  grid-template-columns: 1fr 18vw 18vw 7vw;
+  grid-template-rows: 16vw 10vw;
+}
+.main .awards__content__grid .first {
+  grid-row: 1/3;
+  grid-column: 1/2;
+}
+.main .awards__content__grid .second {
+  grid-row: 1/2;
+  grid-column: 2/3;
+}
+.main .awards__content__grid .third {
+  grid-row: 2/3;
+  grid-column: 2/3;
+}
+.main .awards__content__grid .fourth {
+  grid-row: 1/2;
+  grid-column: 3/4;
+}
+.main .awards__content__grid .fifth {
+  grid-row: 2/3;
+  grid-column: 3/4;
+}
+.main .awards__content__grid .sixth {
+  grid-row: 1/2;
+  grid-column: 4/5;
+}
+.main .awards__content__grid .seventh {
+  grid-row: 2/3;
+  grid-column: 4/5;
 }/*# sourceMappingURL=styles.css.map */
