--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -147,4 +147,117 @@ body {
             
         }
     }
+    //AWARDS// 
+    .awards {
+        width: 100%;
+        max-width: 1600px;
+        margin-top: 8vw;
+        display: flex;
+        flex-direction: column;
+        gap: 8vw;
+        &__introduction {
+            display: flex;
+            justify-content: space-between;
+            &__title {
+                font-size: variables.$s-medium;
+                font-weight: variables.$w-bold;
+                color: variables.$text-color;
+                line-height: 38px;
+            }
+            &__lists {
+                display: flex;
+                gap: 2vw;
+                &__left, &__right {
+                    width: 11.5vw;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1vw;
+                }
+                &__text {
+                    font-size: variables.$s-small;
+                    font-weight: variables.$w-normal;
+                    color: variables.$text-color;
+                    line-height: 23px;
+                    opacity: 0.6;
+                    &:hover {
+                        opacity: 1;
+                        color: variables.$accent-color;
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+        &__content {
+            display: flex;
+            flex-direction: column;
+            gap: 4vw;
+            &__line {
+                @extend %divider;
+            }
+            &__title {
+                font-size: variables.$s-regular;
+                font-weight: variables.$w-bold;
+                color: variables.$text-color;
+                line-height: 28px;
+            }
+            &__subtitle {
+                font-size: variables.$s-small;
+                font-weight: variables.$w-bold;
+                color: variables.$text-color;
+                line-height: 23px;
+            }
+            &__text {
+                font-size: variables.$s-x-small;
+                font-weight: variables.$w-normal;
+                color: variables.$text-color;
+                line-height: 20px;
+                span {
+                    display: block;
+                    opacity: 0.6;
+                    line-height: 26px;
+                    margin-top: 1vw;
+                }
+            }
+            &__year {
+                font-size: variables.$s-x-small;
+                font-weight: variables.$w-normal;
+                color: variables.$text-color;
+                line-height: 20px;
+                text-align: right;
+            }
+            &__grid {
+                display: grid;
+                grid-template-columns: 1fr 18vw 18vw 7vw;
+                grid-template-rows: 16vw 10vw;
+                .first {
+                    grid-row: 1/3;
+                    grid-column: 1/2;
+                }
+                .second {
+                    grid-row: 1/2;
+                    grid-column: 2/3;
+                }
+                .third {
+                    grid-row: 2/3;
+                    grid-column: 2/3;
+                }
+                .fourth {
+                    grid-row: 1/2;
+                    grid-column: 3/4;
+                }
+                .fifth {
+                    grid-row: 2/3;
+                    grid-column: 3/4;
+                }
+                .sixth {
+                    grid-row: 1/2;
+                    grid-column: 4/5;
+                }
+                .seventh {
+                    grid-row: 2/3;
+                    grid-column: 4/5;
+                }
+            }
+        }
+    }
 }
