--- a/styles/_header-and-footer.scss
+++ b/styles/_header-and-footer.scss
@@ -9,6 +9,7 @@
     color: variables.$accent-color;
     border: .5px solid variables.$accent-color;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 //reusables//
