--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -88,6 +88,10 @@ body {
                     width: 100%;
                     height: 100%;
                     object-fit: fill;
+                    &:hover {
+                        transform: scale(1.1);
+                        cursor: pointer;
+                    }
                 }
             }
             &__container {
@@ -183,6 +187,7 @@ body {
                         opacity: 1;
                         color: variables.$accent-color;
                         text-decoration: underline;
+                        cursor: pointer;
                     }
                 }
             }
