--- a/styles/details.scss
+++ b/styles/details.scss
@@ -8,6 +8,13 @@
     background-color: variables.$divider-color;
 }
 
+%right-item {
+    font-size: variables.$s-small;
+    font-weight: variables.$w-bold;
+    color: variables.$text-color;
+    line-height: 23px;
+}
+
 //base//
 *{
     box-sizing: border-box;
@@ -24,5 +31,87 @@ ul, li {
 body {
     overflow-x: hidden;  //hide width scroll
     background-color: variables.$white-color;
+}
+
+.main {
+    margin: variables.$side-site-margin;
+    .description {
+        width: 100%;
+        max-width: 1600px;
+        display: flex;
+        justify-content: space-between;
+        padding: 3vw 0 5vw 0;
+        &__left {
+            width: 100%;
+            max-width: 635px;
+            display: flex;
+            flex-direction: column;
+            gap: 3vw;
+            &__title {
+                font-size: variables.$s-large;
+                font-weight: variables.$w-bold;
+                color: variables.$text-color;
+                line-height: 55px;
+            }
+            &__text {
+                font-size: variables.$s-x-small;
+                font-weight: variables.$w-normal;
+                color: variables.$text-color;
+                line-height: 26px;
+                opacity: 0.8;
+            }
+        }
+        &__right {
+            width: 100%;
+            max-width: 350px;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5vw;
+            &__item {
+                display: flex;
+                justify-content: space-between;
+                &__title {
+                    @extend %right-item;
+                    opacity: 0.5;
+                }
+                &__text {
+                    @extend %right-item;
+                    width: 100%;
+                    max-width: 200px;
+                }
+            }
+            &__line {
+                @extend %divider;
+            }
+        }
+    }
+    .project {
+        width: 100%;
+        max-width: 1600px;
+        display: flex;
+        flex-direction: column;
+        gap: 3vw;
+        &__main-img {
+            width: 100%;
+            height: auto;
+        }
+        &__text {
+            font-size: variables.$s-x-small;
+            font-weight: variables.$w-normal;
+            color: variables.$text-color;
+            line-height: 26px;
+            opacity: 0.8;
+        }
+        &__gallery {
+            width: 100%;
+            display: flex;
+            gap: 2.5vw;
+            margin-bottom: 8vw;
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
 }
 
