--- a/styles/contact.css
+++ b/styles/contact.css
@@ -56,6 +56,12 @@
   color: #000;
   font-size: 18px;
 }
+.main .contact__right__form__line {
+  width: 100%;
+  height: 2px;
+  background-color: #d8d8d8;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -74,4 +80,104 @@ ul, li {
 body {
   overflow-x: hidden;
   background-color: #fff;
+}
+
+.main {
+  margin: 0 10vw;
+}
+.main .contact {
+  width: 100%;
+  max-width: 1600px;
+  display: flex;
+  justify-content: space-between;
+  padding: 3vw 0 10vw 0;
+}
+.main .contact__left {
+  width: 100%;
+  max-width: 445px;
+  display: flex;
+  flex-direction: column;
+  gap: 3vw;
+}
+.main .contact__left__title {
+  font-size: 40px;
+  font-weight: 700;
+  color: #111111;
+  line-height: 55px;
+}
+.main .contact__left__text {
+  font-size: 16px;
+  font-weight: 400;
+  color: #111111;
+  line-height: 26px;
+  opacity: 0.8;
+}
+.main .contact__right {
+  width: 100%;
+  max-width: 475px;
+}
+.main .contact__right__form {
+  display: flex;
+  flex-direction: column;
+}
+.main .contact__right__form__input {
+  width: 100%;
+  max-width: 475px;
+  height: 3vw;
+}
+.main .contact__right__form__input::-moz-placeholder {
+  font-size: 16px;
+  font-weight: 700;
+  color: #111111;
+  line-height: 20px;
+  opacity: 0.6;
+}
+.main .contact__right__form__input:-ms-input-placeholder {
+  font-size: 16px;
+  font-weight: 700;
+  color: #111111;
+  line-height: 20px;
+  opacity: 0.6;
+}
+.main .contact__right__form__input::placeholder {
+  font-size: 16px;
+  font-weight: 700;
+  color: #111111;
+  line-height: 20px;
+  opacity: 0.6;
+}
+.main .contact__right__form__input:hover {
+  background-color: #d8d8d8;
+}
+.main .contact__right__form__input:focus {
+  background-color: #979797;
+}
+.main .contact__right__form__line {
+  margin-bottom: 4vw;
+}
+.main .contact__right__form__btn {
+  width: 125px;
+  height: 50px;
+  background-color: #4a4ff2;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 20px;
+}
+.main .contact__right__form__btn:hover {
+  border-radius: 12px;
+  transform: scale(1.1);
+  opacity: 0.8;
+  cursor: pointer;
+}
+.main .map {
+  width: 100%;
+  max-width: 1600px;
+  margin-bottom: 5vw;
+}
+.main .map__img {
+  width: 100%;
+  max-width: 1600px;
+  height: auto;
 }/*# sourceMappingURL=contact.css.map */
