logo is a link to main page

--- a/styles/_header-and-footer.scss
+++ b/styles/_header-and-footer.scss
@@ -41,6 +41,9 @@
         padding: 5vw 0;
         &__logo {
             @extend %logo;
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
 }
