--- a/styles/contact.css
+++ b/styles/contact.css
@@ -31,6 +31,10 @@
   justify-content: space-between;
   padding: 5vw 0;
 }
+.header__nav__logo:hover {
+  transform: scale(1.1);
+}
+
 .footer {
   margin: 0 10vw;
 }
